src/syntax/parser.output
Gramática

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration_list

    2 external_declaration_list: external_declaration_list external_declaration
    3                          | external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: type_specifier declarator compound_statement

    7 type_specifier: INT
    8               | FLOAT
    9               | ELEM
   10               | SET

   11 declarator: identifier '(' parameters ')'

   12 parameters: parameter_list
   13           | %empty

   14 parameter_list: parameter_declaration ',' parameter_list
   15               | parameter_declaration

   16 parameter_declaration: type_specifier identifier

   17 logical_or_expression: logical_and_expression
   18                      | logical_or_expression OR logical_and_expression

   19 logical_and_expression: equality_expression
   20                       | logical_and_expression AND equality_expression

   21 equality_expression: relational_expression
   22                    | equality_expression EQUAL_TO relational_expression
   23                    | equality_expression NOT_EQUAL_TO relational_expression

   24 relational_expression: additive_expression
   25                      | relational_expression '<' additive_expression
   26                      | relational_expression '>' additive_expression
   27                      | relational_expression LT_OR_EQ_TO additive_expression
   28                      | relational_expression BG_OR_EQ_TO additive_expression

   29 additive_expression: multiplicative_expression
   30                    | additive_expression '+' multiplicative_expression
   31                    | additive_expression '-' multiplicative_expression

   32 multiplicative_expression: unary_expression
   33                          | multiplicative_expression '*' unary_expression
   34                          | multiplicative_expression '/' unary_expression

   35 unary_expression: term
   36                 | unary_operator unary_expression

   37 unary_operator: '+'
   38               | '-'
   39               | '!'

   40 term: identifier
   41     | INTEGER_CONST
   42     | FLOAT_CONST
   43     | '(' additive_expression ')'
   44     | function_call_expression

   45 optional_expression: expression
   46                    | %empty

   47 expression: assignment_expression
   48           | function_arg_constant_expression

   49 function_arg_constant_expression: EMPTY_CONST
   50                                 | STRING
   51                                 | CHARACTER_CONST

   52 function_call_expression: identifier '(' argument_list ')'
   53                         | set_function_call_expression

   54 set_function_call_expression: IS_SET '(' identifier ')'
   55                             | ADD '(' membership_expression ')'
   56                             | REMOVE '(' membership_expression ')'
   57                             | EXISTS '(' membership_expression ')'

   58 argument_list: argument_list ',' expression
   59              | expression
   60              | %empty

   61 assignment_expression: logical_or_expression
   62                      | identifier '=' assignment_expression

   63 compound_statement: '{' statement_list '}'
   64                   | '{' '}'

   65 compound_or_inline_statement: compound_statement
   66                             | statement

   67 statement_list: statement_list statement
   68               | statement

   69 declaration: type_specifier identifier ';'

   70 statement: declaration
   71          | expression_statement
   72          | selection_statement
   73          | iteration_statement
   74          | io_statement
   75          | jump_statement

   76 expression_statement: optional_expression ';'

   77 membership_expression: expression IN expression

   78 selection_statement: IF '(' logical_or_expression ')' compound_or_inline_statement
   79                    | IF '(' logical_or_expression ')' compound_or_inline_statement ELSE compound_or_inline_statement

   80 iteration_statement: FOR '(' optional_expression ';' optional_expression ';' optional_expression ')' compound_or_inline_statement
   81                    | FORALL '(' membership_expression ')' compound_or_inline_statement

   82 io_statement: WRITE '(' expression ')' ';'
   83             | WRITELN '(' expression ')' ';'
   84             | READ '(' identifier ')' ';'

   85 jump_statement: RETURN expression ';'

   86 identifier: IDENTIFIER


Terminais, com as regras onde eles aparecem

$end (0) 0
'!' (33) 39
'(' (40) 11 43 52 54 55 56 57 78 79 80 81 82 83 84
')' (41) 11 43 52 54 55 56 57 78 79 80 81 82 83 84
'*' (42) 33
'+' (43) 30 37
',' (44) 14 58
'-' (45) 31 38
'/' (47) 34
';' (59) 69 76 80 82 83 84 85
'<' (60) 25
'=' (61) 62
'>' (62) 26
'{' (123) 63 64
'}' (125) 63 64
error (256)
INT <token> (258) 7
FLOAT <token> (259) 8
ELEM <token> (260) 9
SET <token> (261) 10
IF <token> (262) 78 79
ELSE <token> (263) 79
FOR <token> (264) 80
RETURN <token> (265) 85
FORALL <token> (266) 81
ADD <token> (267) 55
REMOVE <token> (268) 56
READ <token> (269) 84
WRITELN <token> (270) 83
WRITE <token> (271) 82
IS_SET <token> (272) 54
IN <token> (273) 77
EXISTS <token> (274) 57
IDENTIFIER <token> (275) 86
INTEGER_CONST <token> (276) 41
FLOAT_CONST <token> (277) 42
CHARACTER_CONST <token> (278) 51
STRING <token> (279) 50
EMPTY_CONST <token> (280) 49
IF_ONLY <token> (281)
OR <token> (282) 18
AND <token> (283) 20
EQUAL_TO <token> (284) 22
NOT_EQUAL_TO <token> (285) 23
LT_OR_EQ_TO <token> (286) 27
BG_OR_EQ_TO <token> (287) 28


Não terminais com as regras onde eles aparecem

$accept (47)
    à esquerda: 0
translation_unit (48)
    à esquerda: 1, à direita: 0
external_declaration_list (49)
    à esquerda: 2 3, à direita: 1 2
external_declaration (50)
    à esquerda: 4 5, à direita: 2 3
function_definition (51)
    à esquerda: 6, à direita: 4
type_specifier (52)
    à esquerda: 7 8 9 10, à direita: 6 16 69
declarator (53)
    à esquerda: 11, à direita: 6
parameters (54)
    à esquerda: 12 13, à direita: 11
parameter_list (55)
    à esquerda: 14 15, à direita: 12 14
parameter_declaration (56)
    à esquerda: 16, à direita: 14 15
logical_or_expression (57)
    à esquerda: 17 18, à direita: 18 61 78 79
logical_and_expression (58)
    à esquerda: 19 20, à direita: 17 18 20
equality_expression (59)
    à esquerda: 21 22 23, à direita: 19 20 22 23
relational_expression (60)
    à esquerda: 24 25 26 27 28, à direita: 21 22 23 25 26 27 28
additive_expression (61)
    à esquerda: 29 30 31, à direita: 24 25 26 27 28 30 31 43
multiplicative_expression (62)
    à esquerda: 32 33 34, à direita: 29 30 31 33 34
unary_expression (63)
    à esquerda: 35 36, à direita: 32 33 34 36
unary_operator (64)
    à esquerda: 37 38 39, à direita: 36
term (65)
    à esquerda: 40 41 42 43 44, à direita: 35
optional_expression (66)
    à esquerda: 45 46, à direita: 76 80
expression (67)
    à esquerda: 47 48, à direita: 45 58 59 77 82 83 85
function_arg_constant_expression (68)
    à esquerda: 49 50 51, à direita: 48
function_call_expression (69)
    à esquerda: 52 53, à direita: 44
set_function_call_expression (70)
    à esquerda: 54 55 56 57, à direita: 53
argument_list (71)
    à esquerda: 58 59 60, à direita: 52 58
assignment_expression (72)
    à esquerda: 61 62, à direita: 47 62
compound_statement (73)
    à esquerda: 63 64, à direita: 6 65
compound_or_inline_statement (74)
    à esquerda: 65 66, à direita: 78 79 80 81
statement_list (75)
    à esquerda: 67 68, à direita: 63 67
declaration (76)
    à esquerda: 69, à direita: 5 70
statement (77)
    à esquerda: 70 71 72 73 74 75, à direita: 66 67 68
expression_statement (78)
    à esquerda: 76, à direita: 71
membership_expression (79)
    à esquerda: 77, à direita: 55 56 57 81
selection_statement (80)
    à esquerda: 78 79, à direita: 72
iteration_statement (81)
    à esquerda: 80 81, à direita: 73
io_statement (82)
    à esquerda: 82 83 84, à direita: 74
jump_statement (83)
    à esquerda: 85, à direita: 75
identifier (84)
    à esquerda: 86, à direita: 11 16 40 52 54 62 69 84


Estado 0

    0 $accept: . translation_unit $end

    INT    deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    ELEM   deslocar, e ir ao estado 3
    SET    deslocar, e ir ao estado 4

    translation_unit           ir ao estado 5
    external_declaration_list  ir ao estado 6
    external_declaration       ir ao estado 7
    function_definition        ir ao estado 8
    type_specifier             ir ao estado 9
    declaration                ir ao estado 10


Estado 1

    7 type_specifier: INT .

    IDENTIFIER  reduzir usando a regra 7 (type_specifier)


Estado 2

    8 type_specifier: FLOAT .

    IDENTIFIER  reduzir usando a regra 8 (type_specifier)


Estado 3

    9 type_specifier: ELEM .

    IDENTIFIER  reduzir usando a regra 9 (type_specifier)


Estado 4

   10 type_specifier: SET .

    IDENTIFIER  reduzir usando a regra 10 (type_specifier)


Estado 5

    0 $accept: translation_unit . $end

    $end  deslocar, e ir ao estado 11


Estado 6

    1 translation_unit: external_declaration_list .
    2 external_declaration_list: external_declaration_list . external_declaration

    INT    deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    ELEM   deslocar, e ir ao estado 3
    SET    deslocar, e ir ao estado 4

    $end  reduzir usando a regra 1 (translation_unit)

    external_declaration  ir ao estado 12
    function_definition   ir ao estado 8
    type_specifier        ir ao estado 9
    declaration           ir ao estado 10


Estado 7

    3 external_declaration_list: external_declaration .

    $end   reduzir usando a regra 3 (external_declaration_list)
    INT    reduzir usando a regra 3 (external_declaration_list)
    FLOAT  reduzir usando a regra 3 (external_declaration_list)
    ELEM   reduzir usando a regra 3 (external_declaration_list)
    SET    reduzir usando a regra 3 (external_declaration_list)


Estado 8

    4 external_declaration: function_definition .

    $end   reduzir usando a regra 4 (external_declaration)
    INT    reduzir usando a regra 4 (external_declaration)
    FLOAT  reduzir usando a regra 4 (external_declaration)
    ELEM   reduzir usando a regra 4 (external_declaration)
    SET    reduzir usando a regra 4 (external_declaration)


Estado 9

    6 function_definition: type_specifier . declarator compound_statement
   69 declaration: type_specifier . identifier ';'

    IDENTIFIER  deslocar, e ir ao estado 13

    declarator  ir ao estado 14
    identifier  ir ao estado 15


Estado 10

    5 external_declaration: declaration .

    $end   reduzir usando a regra 5 (external_declaration)
    INT    reduzir usando a regra 5 (external_declaration)
    FLOAT  reduzir usando a regra 5 (external_declaration)
    ELEM   reduzir usando a regra 5 (external_declaration)
    SET    reduzir usando a regra 5 (external_declaration)


Estado 11

    0 $accept: translation_unit $end .

    $padrão  aceitar


Estado 12

    2 external_declaration_list: external_declaration_list external_declaration .

    $end   reduzir usando a regra 2 (external_declaration_list)
    INT    reduzir usando a regra 2 (external_declaration_list)
    FLOAT  reduzir usando a regra 2 (external_declaration_list)
    ELEM   reduzir usando a regra 2 (external_declaration_list)
    SET    reduzir usando a regra 2 (external_declaration_list)


Estado 13

   86 identifier: IDENTIFIER .

    '('  reduzir usando a regra 86 (identifier)
    ';'  reduzir usando a regra 86 (identifier)


Estado 14

    6 function_definition: type_specifier declarator . compound_statement

    '{'  deslocar, e ir ao estado 16

    compound_statement  ir ao estado 17


Estado 15

   11 declarator: identifier . '(' parameters ')'
   69 declaration: type_specifier identifier . ';'

    '('  deslocar, e ir ao estado 18
    ';'  deslocar, e ir ao estado 19


Estado 16

   63 compound_statement: '{' . statement_list '}'
   64                   | '{' . '}'

    INT              deslocar, e ir ao estado 1
    FLOAT            deslocar, e ir ao estado 2
    ELEM             deslocar, e ir ao estado 3
    SET              deslocar, e ir ao estado 4
    IF               deslocar, e ir ao estado 20
    FOR              deslocar, e ir ao estado 21
    RETURN           deslocar, e ir ao estado 22
    FORALL           deslocar, e ir ao estado 23
    ADD              deslocar, e ir ao estado 24
    REMOVE           deslocar, e ir ao estado 25
    READ             deslocar, e ir ao estado 26
    WRITELN          deslocar, e ir ao estado 27
    WRITE            deslocar, e ir ao estado 28
    IS_SET           deslocar, e ir ao estado 29
    EXISTS           deslocar, e ir ao estado 30
    IDENTIFIER       deslocar, e ir ao estado 163
    INTEGER_CONST    deslocar, e ir ao estado 31
    FLOAT_CONST      deslocar, e ir ao estado 32
    CHARACTER_CONST  deslocar, e ir ao estado 33
    STRING           deslocar, e ir ao estado 34
    EMPTY_CONST      deslocar, e ir ao estado 35
    '('              deslocar, e ir ao estado 36
    '+'              deslocar, e ir ao estado 37
    '-'              deslocar, e ir ao estado 38
    '!'              deslocar, e ir ao estado 39
    '}'              deslocar, e ir ao estado 40

    ';'  reduzir usando a regra 46 (optional_expression)

    type_specifier                    ir ao estado 41
    logical_or_expression             ir ao estado 42
    logical_and_expression            ir ao estado 43
    equality_expression               ir ao estado 44
    relational_expression             ir ao estado 45
    additive_expression               ir ao estado 46
    multiplicative_expression         ir ao estado 47
    unary_expression                  ir ao estado 48
    unary_operator                    ir ao estado 49
    term                              ir ao estado 50
    optional_expression               ir ao estado 51
    expression                        ir ao estado 52
    function_arg_constant_expression  ir ao estado 53
    function_call_expression          ir ao estado 54
    set_function_call_expression      ir ao estado 55
    assignment_expression             ir ao estado 56
    statement_list                    ir ao estado 57
    declaration                       ir ao estado 58
    statement                         ir ao estado 59
    expression_statement              ir ao estado 60
    selection_statement               ir ao estado 61
    iteration_statement               ir ao estado 62
    io_statement                      ir ao estado 63
    jump_statement                    ir ao estado 64
    identifier                        ir ao estado 65


Estado 17

    6 function_definition: type_specifier declarator compound_statement .

    $end   reduzir usando a regra 6 (function_definition)
    INT    reduzir usando a regra 6 (function_definition)
    FLOAT  reduzir usando a regra 6 (function_definition)
    ELEM   reduzir usando a regra 6 (function_definition)
    SET    reduzir usando a regra 6 (function_definition)


Estado 18

   11 declarator: identifier '(' . parameters ')'

    INT    deslocar, e ir ao estado 1
    FLOAT  deslocar, e ir ao estado 2
    ELEM   deslocar, e ir ao estado 3
    SET    deslocar, e ir ao estado 4

    ')'  reduzir usando a regra 13 (parameters)

    type_specifier         ir ao estado 66
    parameters             ir ao estado 67
    parameter_list         ir ao estado 68
    parameter_declaration  ir ao estado 69


Estado 19

   69 declaration: type_specifier identifier ';' .

    $end   reduzir usando a regra 69 (declaration)
    INT    reduzir usando a regra 69 (declaration)
    FLOAT  reduzir usando a regra 69 (declaration)
    ELEM   reduzir usando a regra 69 (declaration)
    SET    reduzir usando a regra 69 (declaration)


Estado 20

   78 selection_statement: IF . '(' logical_or_expression ')' compound_or_inline_statement
   79                    | IF . '(' logical_or_expression ')' compound_or_inline_statement ELSE compound_or_inline_statement

    '('  deslocar, e ir ao estado 70


Estado 21

   80 iteration_statement: FOR . '(' optional_expression ';' optional_expression ';' optional_expression ')' compound_or_inline_statement

    '('  deslocar, e ir ao estado 71


Estado 22

   85 jump_statement: RETURN . expression ';'

    ADD              deslocar, e ir ao estado 24
    REMOVE           deslocar, e ir ao estado 25
    IS_SET           deslocar, e ir ao estado 29
    EXISTS           deslocar, e ir ao estado 30
    IDENTIFIER       deslocar, e ir ao estado 163
    INTEGER_CONST    deslocar, e ir ao estado 31
    FLOAT_CONST      deslocar, e ir ao estado 32
    CHARACTER_CONST  deslocar, e ir ao estado 33
    STRING           deslocar, e ir ao estado 34
    EMPTY_CONST      deslocar, e ir ao estado 35
    '('              deslocar, e ir ao estado 36
    '+'              deslocar, e ir ao estado 37
    '-'              deslocar, e ir ao estado 38
    '!'              deslocar, e ir ao estado 39

    logical_or_expression             ir ao estado 42
    logical_and_expression            ir ao estado 43
    equality_expression               ir ao estado 44
    relational_expression             ir ao estado 45
    additive_expression               ir ao estado 46
    multiplicative_expression         ir ao estado 47
    unary_expression                  ir ao estado 48
    unary_operator                    ir ao estado 49
    term                              ir ao estado 50
    expression                        ir ao estado 72
    function_arg_constant_expression  ir ao estado 53
    function_call_expression          ir ao estado 54
    set_function_call_expression      ir ao estado 55
    assignment_expression             ir ao estado 56
    identifier                        ir ao estado 65


Estado 23

   81 iteration_statement: FORALL . '(' membership_expression ')' compound_or_inline_statement

    '('  deslocar, e ir ao estado 73


Estado 24

   55 set_function_call_expression: ADD . '(' membership_expression ')'

    '('  deslocar, e ir ao estado 74


Estado 25

   56 set_function_call_expression: REMOVE . '(' membership_expression ')'

    '('  deslocar, e ir ao estado 75


Estado 26

   84 io_statement: READ . '(' identifier ')' ';'

    '('  deslocar, e ir ao estado 76


Estado 27

   83 io_statement: WRITELN . '(' expression ')' ';'

    '('  deslocar, e ir ao estado 77


Estado 28

   82 io_statement: WRITE . '(' expression ')' ';'

    '('  deslocar, e ir ao estado 78


Estado 29

   54 set_function_call_expression: IS_SET . '(' identifier ')'

    '('  deslocar, e ir ao estado 79


Estado 30

   57 set_function_call_expression: EXISTS . '(' membership_expression ')'

    '('  deslocar, e ir ao estado 80


Estado 31

   41 term: INTEGER_CONST .

    OR            reduzir usando a regra 41 (term)
    AND           reduzir usando a regra 41 (term)
    EQUAL_TO      reduzir usando a regra 41 (term)
    NOT_EQUAL_TO  reduzir usando a regra 41 (term)
    LT_OR_EQ_TO   reduzir usando a regra 41 (term)
    BG_OR_EQ_TO   reduzir usando a regra 41 (term)
    '<'           reduzir usando a regra 41 (term)
    '>'           reduzir usando a regra 41 (term)
    '+'           reduzir usando a regra 41 (term)
    '-'           reduzir usando a regra 41 (term)
    '*'           reduzir usando a regra 41 (term)
    '/'           reduzir usando a regra 41 (term)
    ';'           reduzir usando a regra 41 (term)


Estado 32

   42 term: FLOAT_CONST .

    OR            reduzir usando a regra 42 (term)
    AND           reduzir usando a regra 42 (term)
    EQUAL_TO      reduzir usando a regra 42 (term)
    NOT_EQUAL_TO  reduzir usando a regra 42 (term)
    LT_OR_EQ_TO   reduzir usando a regra 42 (term)
    BG_OR_EQ_TO   reduzir usando a regra 42 (term)
    '<'           reduzir usando a regra 42 (term)
    '>'           reduzir usando a regra 42 (term)
    '+'           reduzir usando a regra 42 (term)
    '-'           reduzir usando a regra 42 (term)
    '*'           reduzir usando a regra 42 (term)
    '/'           reduzir usando a regra 42 (term)
    ';'           reduzir usando a regra 42 (term)


Estado 33

   51 function_arg_constant_expression: CHARACTER_CONST .

    ';'  reduzir usando a regra 51 (function_arg_constant_expression)


Estado 34

   50 function_arg_constant_expression: STRING .

    ';'  reduzir usando a regra 50 (function_arg_constant_expression)


Estado 35

   49 function_arg_constant_expression: EMPTY_CONST .

    ';'  reduzir usando a regra 49 (function_arg_constant_expression)


Estado 36

   43 term: '(' . additive_expression ')'

    ADD            deslocar, e ir ao estado 164
    REMOVE         deslocar, e ir ao estado 165
    IS_SET         deslocar, e ir ao estado 166
    EXISTS         deslocar, e ir ao estado 167
    IDENTIFIER     deslocar, e ir ao estado 168
    INTEGER_CONST  deslocar, e ir ao estado 169
    FLOAT_CONST    deslocar, e ir ao estado 170
    '('            deslocar, e ir ao estado 171
    '+'            deslocar, e ir ao estado 37
    '-'            deslocar, e ir ao estado 38
    '!'            deslocar, e ir ao estado 39

    additive_expression           ir ao estado 81
    multiplicative_expression     ir ao estado 172
    unary_expression              ir ao estado 173
    unary_operator                ir ao estado 174
    term                          ir ao estado 175
    function_call_expression      ir ao estado 176
    set_function_call_expression  ir ao estado 177
    identifier                    ir ao estado 82


Estado 37

   37 unary_operator: '+' .

    ADD            reduzir usando a regra 37 (unary_operator)
    REMOVE         reduzir usando a regra 37 (unary_operator)
    IS_SET         reduzir usando a regra 37 (unary_operator)
    EXISTS         reduzir usando a regra 37 (unary_operator)
    IDENTIFIER     reduzir usando a regra 37 (unary_operator)
    INTEGER_CONST  reduzir usando a regra 37 (unary_operator)
    FLOAT_CONST    reduzir usando a regra 37 (unary_operator)
    '('            reduzir usando a regra 37 (unary_operator)
    '+'            reduzir usando a regra 37 (unary_operator)
    '-'            reduzir usando a regra 37 (unary_operator)
    '!'            reduzir usando a regra 37 (unary_operator)


Estado 38

   38 unary_operator: '-' .

    ADD            reduzir usando a regra 38 (unary_operator)
    REMOVE         reduzir usando a regra 38 (unary_operator)
    IS_SET         reduzir usando a regra 38 (unary_operator)
    EXISTS         reduzir usando a regra 38 (unary_operator)
    IDENTIFIER     reduzir usando a regra 38 (unary_operator)
    INTEGER_CONST  reduzir usando a regra 38 (unary_operator)
    FLOAT_CONST    reduzir usando a regra 38 (unary_operator)
    '('            reduzir usando a regra 38 (unary_operator)
    '+'            reduzir usando a regra 38 (unary_operator)
    '-'            reduzir usando a regra 38 (unary_operator)
    '!'            reduzir usando a regra 38 (unary_operator)


Estado 39

   39 unary_operator: '!' .

    ADD            reduzir usando a regra 39 (unary_operator)
    REMOVE         reduzir usando a regra 39 (unary_operator)
    IS_SET         reduzir usando a regra 39 (unary_operator)
    EXISTS         reduzir usando a regra 39 (unary_operator)
    IDENTIFIER     reduzir usando a regra 39 (unary_operator)
    INTEGER_CONST  reduzir usando a regra 39 (unary_operator)
    FLOAT_CONST    reduzir usando a regra 39 (unary_operator)
    '('            reduzir usando a regra 39 (unary_operator)
    '+'            reduzir usando a regra 39 (unary_operator)
    '-'            reduzir usando a regra 39 (unary_operator)
    '!'            reduzir usando a regra 39 (unary_operator)


Estado 40

   64 compound_statement: '{' '}' .

    $end   reduzir usando a regra 64 (compound_statement)
    INT    reduzir usando a regra 64 (compound_statement)
    FLOAT  reduzir usando a regra 64 (compound_statement)
    ELEM   reduzir usando a regra 64 (compound_statement)
    SET    reduzir usando a regra 64 (compound_statement)


Estado 41

   69 declaration: type_specifier . identifier ';'

    IDENTIFIER  deslocar, e ir ao estado 178

    identifier  ir ao estado 83


Estado 42

   18 logical_or_expression: logical_or_expression . OR logical_and_expression
   61 assignment_expression: logical_or_expression .

    OR  deslocar, e ir ao estado 84

    ';'  reduzir usando a regra 61 (assignment_expression)


Estado 43

   17 logical_or_expression: logical_and_expression .
   20 logical_and_expression: logical_and_expression . AND equality_expression

    AND  deslocar, e ir ao estado 85

    OR   reduzir usando a regra 17 (logical_or_expression)
    ';'  reduzir usando a regra 17 (logical_or_expression)


Estado 44

   19 logical_and_expression: equality_expression .
   22 equality_expression: equality_expression . EQUAL_TO relational_expression
   23                    | equality_expression . NOT_EQUAL_TO relational_expression

    EQUAL_TO      deslocar, e ir ao estado 86
    NOT_EQUAL_TO  deslocar, e ir ao estado 87

    OR   reduzir usando a regra 19 (logical_and_expression)
    AND  reduzir usando a regra 19 (logical_and_expression)
    ';'  reduzir usando a regra 19 (logical_and_expression)


Estado 45

   21 equality_expression: relational_expression .
   25 relational_expression: relational_expression . '<' additive_expression
   26                      | relational_expression . '>' additive_expression
   27                      | relational_expression . LT_OR_EQ_TO additive_expression
   28                      | relational_expression . BG_OR_EQ_TO additive_expression

    LT_OR_EQ_TO  deslocar, e ir ao estado 88
    BG_OR_EQ_TO  deslocar, e ir ao estado 89
    '<'          deslocar, e ir ao estado 90
    '>'          deslocar, e ir ao estado 91

    OR            reduzir usando a regra 21 (equality_expression)
    AND           reduzir usando a regra 21 (equality_expression)
    EQUAL_TO      reduzir usando a regra 21 (equality_expression)
    NOT_EQUAL_TO  reduzir usando a regra 21 (equality_expression)
    ';'           reduzir usando a regra 21 (equality_expression)


Estado 46

   24 relational_expression: additive_expression .
   30 additive_expression: additive_expression . '+' multiplicative_expression
   31                    | additive_expression . '-' multiplicative_expression

    '+'  deslocar, e ir ao estado 92
    '-'  deslocar, e ir ao estado 93

    OR            reduzir usando a regra 24 (relational_expression)
    AND           reduzir usando a regra 24 (relational_expression)
    EQUAL_TO      reduzir usando a regra 24 (relational_expression)
    NOT_EQUAL_TO  reduzir usando a regra 24 (relational_expression)
    LT_OR_EQ_TO   reduzir usando a regra 24 (relational_expression)
    BG_OR_EQ_TO   reduzir usando a regra 24 (relational_expression)
    '<'           reduzir usando a regra 24 (relational_expression)
    '>'           reduzir usando a regra 24 (relational_expression)
    ';'           reduzir usando a regra 24 (relational_expression)


Estado 47

   29 additive_expression: multiplicative_expression .
   33 multiplicative_expression: multiplicative_expression . '*' unary_expression
   34                          | multiplicative_expression . '/' unary_expression

    '*'  deslocar, e ir ao estado 94
    '/'  deslocar, e ir ao estado 95

    OR            reduzir usando a regra 29 (additive_expression)
    AND           reduzir usando a regra 29 (additive_expression)
    EQUAL_TO      reduzir usando a regra 29 (additive_expression)
    NOT_EQUAL_TO  reduzir usando a regra 29 (additive_expression)
    LT_OR_EQ_TO   reduzir usando a regra 29 (additive_expression)
    BG_OR_EQ_TO   reduzir usando a regra 29 (additive_expression)
    '<'           reduzir usando a regra 29 (additive_expression)
    '>'           reduzir usando a regra 29 (additive_expression)
    '+'           reduzir usando a regra 29 (additive_expression)
    '-'           reduzir usando a regra 29 (additive_expression)
    ';'           reduzir usando a regra 29 (additive_expression)


Estado 48

   32 multiplicative_expression: unary_expression .

    OR            reduzir usando a regra 32 (multiplicative_expression)
    AND           reduzir usando a regra 32 (multiplicative_expression)
    EQUAL_TO      reduzir usando a regra 32 (multiplicative_expression)
    NOT_EQUAL_TO  reduzir usando a regra 32 (multiplicative_expression)
    LT_OR_EQ_TO   reduzir usando a regra 32 (multiplicative_expression)
    BG_OR_EQ_TO   reduzir usando a regra 32 (multiplicative_expression)
    '<'           reduzir usando a regra 32 (multiplicative_expression)
    '>'           reduzir usando a regra 32 (multiplicative_expression)
    '+'           reduzir usando a regra 32 (multiplicative_expression)
    '-'           reduzir usando a regra 32 (multiplicative_expression)
    '*'           reduzir usando a regra 32 (multiplicative_expression)
    '/'           reduzir usando a regra 32 (multiplicative_expression)
    ';'           reduzir usando a regra 32 (multiplicative_expression)


Estado 49

   36 unary_expression: unary_operator . unary_expression

    ADD            deslocar, e ir ao estado 24
    REMOVE         deslocar, e ir ao estado 25
    IS_SET         deslocar, e ir ao estado 29
    EXISTS         deslocar, e ir ao estado 30
    IDENTIFIER     deslocar, e ir ao estado 179
    INTEGER_CONST  deslocar, e ir ao estado 31
    FLOAT_CONST    deslocar, e ir ao estado 32
    '('            deslocar, e ir ao estado 36
    '+'            deslocar, e ir ao estado 37
    '-'            deslocar, e ir ao estado 38
    '!'            deslocar, e ir ao estado 39

    unary_expression              ir ao estado 96
    unary_operator                ir ao estado 49
    term                          ir ao estado 50
    function_call_expression      ir ao estado 54
    set_function_call_expression  ir ao estado 55
    identifier                    ir ao estado 180


Estado 50

   35 unary_expression: term .

    OR            reduzir usando a regra 35 (unary_expression)
    AND           reduzir usando a regra 35 (unary_expression)
    EQUAL_TO      reduzir usando a regra 35 (unary_expression)
    NOT_EQUAL_TO  reduzir usando a regra 35 (unary_expression)
    LT_OR_EQ_TO   reduzir usando a regra 35 (unary_expression)
    BG_OR_EQ_TO   reduzir usando a regra 35 (unary_expression)
    '<'           reduzir usando a regra 35 (unary_expression)
    '>'           reduzir usando a regra 35 (unary_expression)
    '+'           reduzir usando a regra 35 (unary_expression)
    '-'           reduzir usando a regra 35 (unary_expression)
    '*'           reduzir usando a regra 35 (unary_expression)
    '/'           reduzir usando a regra 35 (unary_expression)
    ';'           reduzir usando a regra 35 (unary_expression)


Estado 51

   76 expression_statement: optional_expression . ';'

    ';'  deslocar, e ir ao estado 97


Estado 52

   45 optional_expression: expression .

    ';'  reduzir usando a regra 45 (optional_expression)


Estado 53

   48 expression: function_arg_constant_expression .

    ';'  reduzir usando a regra 48 (expression)


Estado 54

   44 term: function_call_expression .

    OR            reduzir usando a regra 44 (term)
    AND           reduzir usando a regra 44 (term)
    EQUAL_TO      reduzir usando a regra 44 (term)
    NOT_EQUAL_TO  reduzir usando a regra 44 (term)
    LT_OR_EQ_TO   reduzir usando a regra 44 (term)
    BG_OR_EQ_TO   reduzir usando a regra 44 (term)
    '<'           reduzir usando a regra 44 (term)
    '>'           reduzir usando a regra 44 (term)
    '+'           reduzir usando a regra 44 (term)
    '-'           reduzir usando a regra 44 (term)
    '*'           reduzir usando a regra 44 (term)
    '/'           reduzir usando a regra 44 (term)
    ';'           reduzir usando a regra 44 (term)


Estado 55

   53 function_call_expression: set_function_call_expression .

    OR            reduzir usando a regra 53 (function_call_expression)
    AND           reduzir usando a regra 53 (function_call_expression)
    EQUAL_TO      reduzir usando a regra 53 (function_call_expression)
    NOT_EQUAL_TO  reduzir usando a regra 53 (function_call_expression)
    LT_OR_EQ_TO   reduzir usando a regra 53 (function_call_expression)
    BG_OR_EQ_TO   reduzir usando a regra 53 (function_call_expression)
    '<'           reduzir usando a regra 53 (function_call_expression)
    '>'           reduzir usando a regra 53 (function_call_expression)
    '+'           reduzir usando a regra 53 (function_call_expression)
    '-'           reduzir usando a regra 53 (function_call_expression)
    '*'           reduzir usando a regra 53 (function_call_expression)
    '/'           reduzir usando a regra 53 (function_call_expression)
    ';'           reduzir usando a regra 53 (function_call_expression)


Estado 56

   47 expression: assignment_expression .

    ';'  reduzir usando a regra 47 (expression)


Estado 57

   63 compound_statement: '{' statement_list . '}'
   67 statement_list: statement_list . statement

    INT              deslocar, e ir ao estado 1
    FLOAT            deslocar, e ir ao estado 2
    ELEM             deslocar, e ir ao estado 3
    SET              deslocar, e ir ao estado 4
    IF               deslocar, e ir ao estado 20
    FOR              deslocar, e ir ao estado 21
    RETURN           deslocar, e ir ao estado 22
    FORALL           deslocar, e ir ao estado 23
    ADD              deslocar, e ir ao estado 24
    REMOVE           deslocar, e ir ao estado 25
    READ             deslocar, e ir ao estado 26
    WRITELN          deslocar, e ir ao estado 27
    WRITE            deslocar, e ir ao estado 28
    IS_SET           deslocar, e ir ao estado 29
    EXISTS           deslocar, e ir ao estado 30
    IDENTIFIER       deslocar, e ir ao estado 163
    INTEGER_CONST    deslocar, e ir ao estado 31
    FLOAT_CONST      deslocar, e ir ao estado 32
    CHARACTER_CONST  deslocar, e ir ao estado 33
    STRING           deslocar, e ir ao estado 34
    EMPTY_CONST      deslocar, e ir ao estado 35
    '('              deslocar, e ir ao estado 36
    '+'              deslocar, e ir ao estado 37
    '-'              deslocar, e ir ao estado 38
    '!'              deslocar, e ir ao estado 39
    '}'              deslocar, e ir ao estado 98

    ';'  reduzir usando a regra 46 (optional_expression)

    type_specifier                    ir ao estado 41
    logical_or_expression             ir ao estado 42
    logical_and_expression            ir ao estado 43
    equality_expression               ir ao estado 44
    relational_expression             ir ao estado 45
    additive_expression               ir ao estado 46
    multiplicative_expression         ir ao estado 47
    unary_expression                  ir ao estado 48
    unary_operator                    ir ao estado 49
    term                              ir ao estado 50
    optional_expression               ir ao estado 51
    expression                        ir ao estado 52
    function_arg_constant_expression  ir ao estado 53
    function_call_expression          ir ao estado 54
    set_function_call_expression      ir ao estado 55
    assignment_expression             ir ao estado 56
    declaration                       ir ao estado 58
    statement                         ir ao estado 99
    expression_statement              ir ao estado 60
    selection_statement               ir ao estado 61
    iteration_statement               ir ao estado 62
    io_statement                      ir ao estado 63
    jump_statement                    ir ao estado 64
    identifier                        ir ao estado 65


Estado 58

   70 statement: declaration .
